--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'java'
+    id "com.github.spotbugs" version "4.6.0"
 }
 
 group 'org.example'
@@ -11,6 +12,16 @@ repositories {
 
 test {
     useJUnitPlatform()
+}
+
+spotbugsMain {
+    reports {
+        html {
+            enabled = true
+            destination = file("$buildDir/reports/spotbugs/main/spotbugs.html")
+            stylesheet = 'fancy-hist.xsl'
+        }
+    }
 }
 
 dependencies {
