--- a/build.gradle
+++ b/build.gradle
@@ -36,4 +36,11 @@ pmd {
 dependencies {
     testImplementation("org.junit.jupiter:junit-jupiter-api:5.7.0")
     testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:5.7.0")
+    testImplementation("com.vmlens:api:1.1.0")
 }
+
+task runVmlens(type:Exec) {
+    executable "mvn"
+    args "test"
+}
+
